--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             <li>Travelling</li>
             <li>Eating</li>
         </ol>
+        <h2>My Skills</h2>
+        <p>My skills are as follows:</p>
+        <ol>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Python</li>
+            <li>Artificial Intelligence.</li>
+        </ol>
     </section>
 <!--    project section-->
     <section id="projects">
