--- a/index.html
+++ b/index.html
@@ -23,22 +23,26 @@
         <h1>About me</h1>
         <img src="statics/images/image1.png" id="profile">
         <p>My name is Ruth Natalie,I am 20 yrs Old,I come From Nairobi.I am an Artist.A Student at eMobilis.<br><br> The following are my Hobbies:</p>
-        <ol>
+        <ol type="i">
             <li>Swimming</li>
             <li>Dancing</li>
             <li>Travelling</li>
             <li>Eating</li>
         </ol>
+         </section>
+<!--    Skill Section-->
+        <section id="skills">
         <h2>My Skills</h2>
         <p>My skills are as follows:</p>
-        <ol>
+        <ol type="a">
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
             <li>Python</li>
             <li>Artificial Intelligence.</li>
         </ol>
-    </section>
+      </section>
+
 <!--    project section-->
     <section id="projects">
         <h2>Projects</h2>
@@ -68,14 +72,13 @@
             <label for="message">Message</label>
             <textarea name="message" id="message" cols="30" rows="10"></textarea>
             <button type="submit">SUBMIT</button>
-        <p>Email:ajemaruth@gmail.com</p>
-        <p>Let's connect and read together</p>
             </form>
     </section>
 </main>
 <footer>
     <p>copyright ruth natalie&copy;2025</p>
-<img src="statics/images/img.png" width="100" height="100">
+<img src="statics/images/img.png" width="50" height="50">
+    <img src="statics/images/img2.png" width="50" height="50">
 </footer>
 </body>
 </html>
